--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Barbershop</title>
 </head>
-<header>
-<figure><img=src"" width="" heigth="" alt=""> </figure>
+<header class="main-header">
+<figure><img=src"" width="45px" heigth="10px" alt="barbershop"> </figure>
 <nav>     
     <ul>
        <li><a href src="">информация</a></li> 
