--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8">
     <title>Barbershop</title>
 </head>
-<header class="main-header">
-<figure><img=src"" width="45px" heigth="10px" alt="barbershop"> </figure>
-<nav>     
-    <ul>
-       <li><a href src="">информация</a></li> 
-        <li><a href src="">Новости</li> 
-       <li><a href src="">Прайс-лист</a></li>
-       <li><a href src="">Магазин</a></li>
-       <li><a href src="">Контакты</a></li>
-    </ul>
-    <a href src="">Логин</a>   
-</nav>
-</header>
 <body>
+    <header class="main-header">
+        <div class="container">
+            <div class="index-logo">
+                <img=src"img/index-logo.png" width="45px" heigth="10px" alt="barbershop">
+            </div>
+            <nav class="main-navigation">     
+                <ul>
+                    <li><a href src="">информация</a></li> 
+                    <li><a href src="">Новости</li> 
+                    <li><a href src="">Прайс-лист</a></li>
+                    <li><a href src="">Магазин</a></li>
+                    <li><a href src="">Контакты</a></li>
+                </ul>
+                
+                </nav>
+                <div class="user-block">
+                    <a class="login" href="">Логин!</a>   
+                </div>
+        </div>
+    </header>
+    <main class="container">
+    </main>
 
-<p><img src="img/sun.jpg"></p>  
+
 </body>
 <footer>
  <div class="contacts">   
