--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="container">
             <div class="index-logo">
-                <img=src"img/index-logo.png" width="45px" heigth="10px" alt="barbershop">
+                <img src="img/index-logo.png" width="50" heigth="20" alt="barbershop">
             </div>
             <nav class="main-navigation">     
                 <ul>
@@ -21,7 +21,7 @@
                 
                 </nav>
                 <div class="user-block">
-                    <a class="login" href="">Логин!</a>   
+                    <a class="login" href="">Вход</a>   
                 </div>
         </div>
     </header>
