--- a/index.html
+++ b/index.html
@@ -18,17 +18,44 @@
                     <li><a href src="">Магазин</a></li>
                     <li><a href src="">Контакты</a></li>
                 </ul>
-                
-                </nav>
+            </nav>
                 <div class="user-block">
                     <a class="login" href="">Вход</a>   
                 </div>
         </div>
     </header>
     <main class="container">
+        <section class="futures">
+            <div class="short-menu">
+            <h2 class="short-menu-title">Средства для ухода</h2>
+            <nav class="additional-navigation">     
+                <ul>
+                    <li><a href src="">Главнаяя</a></li> 
+                    <li><a href src="">Магазин</li> 
+                    <li><a href src="">Средства для ухода</a></li>
+                </ul>
+            </nav>
+            </div>
+        </section>
+        <div class="content-left">
+        <h2 class="content-title">Производители</h2> 
+        <ul class="manufacturer">
+            <li>baxter of california</li>
+            <li>MR nato</li>  
+            <li>slavecito</li>
+        </ul> 
+        <h2 class="content-title">Группы товаров</h2> 
+         <ul class="group-of-products">
+            <li>Бритвенные принадлежности</li>
+            <li>Средства для ухода</li>  
+            <li>аксессуары</li>
+        </ul> 
+        </div>
+        <div class="content-right">
+        </div>    
+
+
     </main>
-
-
 </body>
 <footer>
  <div class="contacts">   
