--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="container">
             <div class="index-logo">
-                <img src="img/index-logo.png" width="50" heigth="20" alt="barbershop">
+             <a href=""><img src="img/index-logo.png" width="50" heigth="20" alt="barbershop"></a>
             </div>
             <nav class="main-navigation">     
                 <ul>
