--- a/index.html
+++ b/index.html
@@ -25,32 +25,75 @@
         </div>
     </header>
     <main class="container">
-        <section class="futures">
-            <div class="short-menu">
-            <h2 class="short-menu-title">Средства для ухода</h2>
+        <div class="breadscrubs">
+         <h1 class="short-menu-title">Средства для ухода</h1>
             <nav class="additional-navigation">     
                 <ul>
                     <li><a href src="">Главнаяя</a></li> 
-                    <li><a href src="">Магазин</li> 
+                    <li><a href src="">Магазин</a></li> 
                     <li><a href src="">Средства для ухода</a></li>
                 </ul>
             </nav>
-            </div>
-        </section>
+         </div>
         <div class="content-left">
-        <h2 class="content-title">Производители</h2> 
-        <ul class="manufacturer">
-            <li>baxter of california</li>
-            <li>MR nato</li>  
-            <li>slavecito</li>
-        </ul> 
-        <h2 class="content-title">Группы товаров</h2> 
-         <ul class="group-of-products">
-            <li>Бритвенные принадлежности</li>
-            <li>Средства для ухода</li>  
-            <li>аксессуары</li>
-        </ul> 
+            <form action="">
+                <div class="filter">
+                    <h3>Производители</h3>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">baxter of california</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">MR nato</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">MR nato</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">slavecito</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">malin-goetz</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">murreys</label>
+                    </div>
+                    <div class="ch-group">
+                         <input type="checkbox" name="items" id="">
+                         <label for="">american crew</label>
+                    </div>
+                </div>
+                 <div class="filter">
+                      <h3>Группы товаров</h3>
+                <div class="ch-group">
+                         <input type="radio" name="items" id="">
+                         <label for="">Бритвенные принадлежности</label>
+                </div>
+                <div class="ch-group">
+                         <input type="radio" name="items" id="">
+                         <label for="">Средства для ухода</label>
+                </div>
+                <div class="ch-group">
+                         <input type="radio" name="items" id="">
+                         <label for="">Аксессуары</label>
+                </div>
+                
+                <a href>Показать</a>
+
+
+
+
+                </div>
+            </form>    
+                
         </div>
+
+
         <div class="content-right">
         </div>    
 
