--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="filter">
                     <h3>Производители</h3>
                     <div class="ch-group">
-                         <input type="checkbox" name="items" id="">
+                         <input type="checkbox" name="items" id="" checked>
                          <label for="">baxter of california</label>
                     </div>
                     <div class="ch-group">
@@ -83,7 +83,7 @@
                          <label for="">Аксессуары</label>
                 </div>
                 
-                <a href>Показать</a>
+                <a class="" href>Показать</a>
 
 
 
