--- a/index.html
+++ b/index.html
@@ -133,8 +133,17 @@
     Барбершоп "Бородинский"<br>
     Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8<br>
     <a href="">Как нас найти?</a><br>
-    <tel>Телефон: +7(495)666-02-66</tel>
-<div class="contacts">  
+    Телефон:<a href="tel:+74956660266>+7(495)666-02-66</a>
+</div>
+<div class="contacts-sn">
+<p>Давайте дружить!</p>
+<a class="img-sn" href=""><img src="" alt="vk"></a>
+<a class="img-sn" href=""><img src="" alt="f"></a>   
+<a class="img-sn" href=""><img src="" alt="inst"></a>       
+</div>
+<div class="dev">
+
+</dev>
 </footer>
 </body>
 
