--- a/index.html
+++ b/index.html
@@ -84,38 +84,38 @@
             <div class="catalog-item">
              <img src="" alt="">
              <h3>Набор для путешествий "Baxter of california"</h3>
-             <span>2500</span>
+             <span>2900</span>
              <a href="">Купить</a>
             </div>
             <div class="catalog-item">
              <img src="" alt="">
              <h3>Увлажняющий кондиционер "Baxter of california"</h3>
-             <span>2500</span>
+             <span>750</span>
              <a href="">Купить</a>
             </div>
             <div class="catalog-item">
              <img src="" alt="">
              <h3>Гель для волос "Slavecito"</h3>
-             <span>2500</span>
+             <span>290</span>
              <a href="">Купить</a>
             </div>
             <div class="catalog-item">
              <img src="" alt="">
              <h3>Гель для увлажнения волос "American crew"</h3>
-             <span>2500</span>
+             <span>500</span>
              <a href="">Купить</a>
             </div>
               <div class="catalog-item">
              <img src="" alt="">
              <h3>Гель для волос "American crew"</h3>
-             <span>2500</span>
+             <span>300</span>
              <a href="">Купить</a>
             </div>
              </div>
               <div class="catalog-item">
              <img src="" alt="">
              <h3>Набор для бритья "Baxter of california"</h3>
-             <span>2500</span>
+             <span>3900</span>
              <a href="">Купить</a>
             </div>
             <div class="paginator">
@@ -133,7 +133,7 @@
     Барбершоп "Бородинский"<br>
     Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8<br>
     <a href="">Как нас найти?</a><br>
-    Телефон:<a href="tel:+74956660266>+7(495)666-02-66</a>
+    Телефон:<a href="tel:+74956660266">+7(495)666-02-66</a>
 </div>
 <div class="contacts-sn">
 <p>Давайте дружить!</p>
