--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 <a class="img-sn" href=""><img src="" alt="f"></a>   
 <a class="img-sn" href=""><img src="" alt="inst"></a>       
 </div>
-<div class="dev">
-
+<div class="developer">
+    <p>Разработано:</p
+     <a href="#" class="">html academy</a>
 </dev>
 </footer>
 </body>
-
 </html
